@@ -1,6 +1,8 @@
 Revision history for Perl extension {{$dist->name}}:
 
 {{$NEXT}}
+  [Tests]
+  - Test for warnings.
 
 0.28      2020-04-02 17:35:22+01:00 Europe/London (TRIAL RELEASE)
   [Bug Fixes]
